package interfaces;

public interface Eatable {
    public void eated(String name);
    public int getCalories();
}
