package interfaces;

@FunctionalInterface
public interface Scary {
    public boolean isScary();
}
