package utils;

public interface FoodContainer {
    public void putFood(Eatable[] food);
    public Eatable[] removeFood();
}
